--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
                 <div class="flyer-placeholder">
                     <div style="text-align: center;">
                         <i class="fas fa-image" style="font-size: 3.5rem; margin-bottom: 20px; display: block; animation: pulse 2s infinite;"></i>
-                        <img src="/IT-AUDIT/it audit.jpg" alt="IT Audit Course Flyer" class="flyer-image">
+                        <img src="/it audit.jpg" alt="IT Audit Course Flyer" class="flyer-image">
                         <small style="opacity: 0.8;">(Recommended: 500x500px)</small>
                     </div>
                 </div>
