--- a/index.html
+++ b/index.html
@@ -272,12 +272,21 @@
         }
 
         .hero-section {
-            display: grid;
-            grid-template-columns: 1.2fr 0.8fr;
-            gap: 50px;
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
             align-items: center;
             margin-bottom: 80px;
             animation: fadeInUp 1s ease-out 0.3s both;
+        }
+
+        @media (min-width: 768px) {
+            .hero-section {
+                display: grid;
+                grid-template-columns: 1.2fr 0.8fr;
+                gap: 50px;
+                flex-direction: unset;
+            }
         }
 
         .hero-content {
@@ -285,13 +294,13 @@
         }
 
         .main-title {
-            font-size: clamp(2.5rem, 6vw, 3.8rem);
+            font-size: clamp(1.8rem, 8vw, 3.8rem);
             /* Responsive font size */
             color: var(--pure-white);
             margin-bottom: 25px;
             font-weight: 900;
             text-shadow: var(--text-shadow);
-            line-height: 1.1;
+            line-height: 1.2;
             position: relative;
         }
 
@@ -905,13 +914,26 @@
             }
 
             .audit-icons {
-                position: relative;
-                top: auto;
-                right: auto;
+                display: flex;
                 flex-direction: row;
                 justify-content: center;
+                gap: 20px;
                 margin: 20px 0;
+                z-index: 2;
                 order: -1;
+                /* Show before hero content on mobile */
+            }
+
+            @media (min-width: 768px) {
+                .audit-icons {
+                    position: absolute;
+                    top: 20%;
+                    right: 10%;
+                    flex-direction: column;
+                    gap: 30px;
+                    margin: 0;
+                    order: unset;
+                }
             }
 
             .main-title {
@@ -1095,7 +1117,17 @@
             }
 
             .container {
+                max-width: 1400px;
+                margin: 0 auto;
                 padding: 15px;
+                position: relative;
+                z-index: 1;
+            }
+
+            @media (min-width: 768px) {
+                .container {
+                    padding: 20px;
+                }
             }
 
             .feature-card {
